Fix button size on tablet-media

--- a/src/components/DecoratedButton/DecoratedButton.module.css
+++ b/src/components/DecoratedButton/DecoratedButton.module.css
@@ -29,3 +29,9 @@
     font-size: 14px;
   }
 }
+
+@media tablet {
+  .decoratedButton {
+    padding: 6px 20px;
+  }
+}
